// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<MessageEditHistory /> should match the snapshot 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_MessageEditHistoryDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Message edits
      </h1>
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ScrollPanel mx_MessageEditHistoryDialog_scrollPanel"
      tabindex="-1"
    >
      <div
        class="mx_RoomView_messageListWrapper"
      >
        <ol
          aria-live="polite"
          class="mx_RoomView_MessageList"
        >
          <ul
            class="mx_MessageEditHistoryDialog_edits"
          >
            <li>
              <div
                aria-label="Thu, Jan 1, 1970"
                class="_flex_4dswl_9 mx_TimelineSeparator _separator_zbrro_8 _timelineSeparator_yq5ye_8"
                role="separator"
                style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
              >
                <hr
                  role="none"
                />
                <div>
                  <h2
                    aria-hidden="true"
                  >
                    Thu, Jan 1, 1970
                  </h2>
                </div>
                <hr
                  role="none"
                />
              </div>
            </li>
            <li>
              <div
                class="mx_EventTile"
              >
                <div
                  class="mx_EventTile_line"
                >
                  <span
                    class="mx_MessageTimestamp"
                  >
                    00:00
                  </span>
                  <div
                    class="mx_EventTile_content"
                  >
                    <span
                      class="mx_EventTile_body translate"
                      dir="auto"
                    >
                      My Great Massage
                    </span>
                  </div>
                  <div
                    class="mx_MessageActionBar"
                  >
                    <div
                      class="mx_AccessibleButton"
                      role="button"
                      tabindex="0"
                    >
                      Remove
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </ol>
      </div>
    </div>
    <div
      aria-describedby="_r_2_"
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
        />
      </svg>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`<MessageEditHistory /> should support events with 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_MessageEditHistoryDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Message edits
      </h1>
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ScrollPanel mx_MessageEditHistoryDialog_scrollPanel"
      tabindex="-1"
    >
      <div
        class="mx_RoomView_messageListWrapper"
      >
        <ol
          aria-live="polite"
          class="mx_RoomView_MessageList"
        >
          <ul
            class="mx_MessageEditHistoryDialog_edits"
          >
            <li>
              <div
                aria-label="Thu, Jan 1, 1970"
                class="_flex_4dswl_9 mx_TimelineSeparator _separator_zbrro_8 _timelineSeparator_yq5ye_8"
                role="separator"
                style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
              >
                <hr
                  role="none"
                />
                <div>
                  <h2
                    aria-hidden="true"
                  >
                    Thu, Jan 1, 1970
                  </h2>
                </div>
                <hr
                  role="none"
                />
              </div>
            </li>
            <li>
              <div
                class="mx_EventTile"
              >
                <div
                  class="mx_EventTile_line"
                >
                  <span
                    class="mx_MessageTimestamp"
                  >
                    00:00
                  </span>
                  <div
                    class="mx_EventTile_content"
                  >
                    <span
                      class="mx_EventTile_body markdown-body"
                      dir="auto"
                    >
                      <span>
                        My Great Massage
                        <span
                          class="mx_EditHistoryMessage_deletion"
                        >
                          ?
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="mx_MessageActionBar"
                  >
                    <div
                      class="mx_AccessibleButton"
                      role="button"
                      tabindex="0"
                    >
                      Remove
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li>
              <div
                class="mx_EventTile"
              >
                <div
                  class="mx_EventTile_line"
                >
                  <span
                    class="mx_MessageTimestamp"
                  >
                    00:00
                  </span>
                  <div
                    class="mx_EventTile_content"
                  >
                    <span
                      class="mx_EventTile_body markdown-body"
                      dir="auto"
                    >
                      <span>
                        My Great M
                        <span
                          class="mx_EditHistoryMessage_deletion"
                        >
                          i
                        </span>
                        <span
                          class="mx_EditHistoryMessage_insertion"
                        >
                          a
                        </span>
                        ssage
                        <span
                          class="mx_EditHistoryMessage_insertion"
                        >
                          ?
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="mx_MessageActionBar"
                  >
                    <div
                      class="mx_AccessibleButton"
                      role="button"
                      tabindex="0"
                    >
                      Remove
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li>
              <div
                class="mx_EventTile"
              >
                <div
                  class="mx_EventTile_line"
                >
                  <span
                    class="mx_MessageTimestamp"
                  >
                    00:00
                  </span>
                  <div
                    class="mx_EventTile_content"
                  >
                    <span
                      class="mx_EventTile_body translate"
                      dir="auto"
                    >
                      My Great Missage
                    </span>
                  </div>
                  <div
                    class="mx_MessageActionBar"
                  >
                    <div
                      class="mx_AccessibleButton"
                      role="button"
                      tabindex="0"
                    >
                      Remove
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </ol>
      </div>
    </div>
    <div
      aria-describedby="_r_8_"
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
        />
      </svg>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
